# ChangeLog for media-gfx/meshlab
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/meshlab/ChangeLog,v 1.1 2014/08/14 18:38:38 amynka Exp $

*meshlab-1.3.2 (14 Aug 2014)

  14 Aug 2014; Amy Winston <amynka@gentoo.org>
  +files/1.3.2/01_crash-on-save.patch, +files/1.3.2/02_cstddef.patch,
  +files/1.3.2/03_disable-updates.patch, +files/1.3.2/05_externals.patch,
  +files/1.3.2/06_format-security.patch, +files/1.3.2/07_gcc47.patch,
  +files/1.3.2/08_lib3ds.patch, +files/1.3.2/09_libbz2.patch,
  +files/1.3.2/10_muparser.patch, +files/1.3.2/11_openctm.patch,
  +files/1.3.2/12_overflow.patch, +files/1.3.2/13_pluginsdir.patch,
  +files/1.3.2/14_ply_numeric.patch, +files/1.3.2/15_qhull.patch,
  +files/1.3.2/16_shadersdir.patch, +files/1.3.2/17_structuresynth.patch,
  +files/1.3.2/18_glew.c18p1.patch, +files/1.3.2/19_CONFLICTS_IN_rpath.patch,
  +files/1.3.2/20_rpath.c18p2.patch, +files/1.3.2/21_RESOLUTION.patch,
  +files/1.3.2/22_aliasing.patch, +meshlab-1.3.2.ebuild, +metadata.xml:
  New package for 3d printing added