@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/meshlab
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/meshlab/ChangeLog,v 1.1 2014/08/14 18:38:38 amynka Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/meshlab/ChangeLog,v 1.2 2014/09/11 11:27:50 kensington Exp $
+
+  11 Sep 2014; Michael Palimaka <kensington@gentoo.org> meshlab-1.3.2.ebuild:
+  Pin dev-qt/qtcore and dev-qt/qtopengl to SLOT 4.
 
 *meshlab-1.3.2 (14 Aug 2014)
 
